# slack-mattermost-splitter

./: .gitignore  Cargo.toml  ROADMAP.md  script.sh
.github/workflows/: cd.yml
src/: main.rs
src/downloader/: chunked.rs  mod.rs  streamed.rs
src/split/: config.rs  mod.rs  model.rs  splitter.rs
