[package]
name = "slack-mattermost-splitter"
version = "0.2.1"
edition = "2021"

[dependencies]

anyhow = "*"
async_zip = { version = "0.0.17", features = [
  "async-compression",
  "full",
  "tokio",
  "tokio-util",
] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
json_value_merge = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.11", features = ["compat"] }
reqwest = "0.12.5"
futures = "0.3.30"
env_logger = "0.11.5"
log = "0.4.22"
reqwest-middleware = "0.3.2"
thiserror = "1.0.63"
form_urlencoded = "1.2.1"
base32 = "0.5.1"
uuid = { version = "1.10.0", features = ["v4"] }
serde-aux = "4.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
snafu = "0.8.4"
redb = "2.1.2"
sled = "0.34.7"
tokio-task-manager = "0.2.0"

# For downloads
trauma = "2.2.5"
async-trait = "0.1.82"
lazy_static = "1.5.0"
jammdb = "0.11.0"
rmp-serde = "1.3.0"
futures-util = "0.3.30"
reqwest-retry = "0.6.1"
indicatif = { version = "0.17.8", features = ["futures", "tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
